build: activate Gradle project isolation for faster build startup (#25397)
Signed-off-by: Jendrik Johannes <jendrik@onepiece.software>